--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@ header {
     background: #579c87ff;
     color: #fdcb46ff;
     text-align: center;
-    a { 
+    a { color: red 
         
     }
 } 
