--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,8 +2,7 @@ header {
     background: #579c87ff;
     color: #fdcb46ff;
     text-align: center;
-    a { color: red
-
+    a { color: red;
         
     }
 } 
