--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,21 @@ header {
   background: #579c87ff;
   color: #fdcb46ff;
   text-align: center;
+  height: 60px;
 }
 header a {
   color: #fdcb46ff;
+}
+
+header {
+  background: #579c87ff;
+  color: #fdcb46ff;
+  text-align: center;
+  height: 60px;
+}
+header a {
+  color: #fdcb46ff;
+  padding-top: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
