--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,23 @@ header {
     background: #579c87ff;
     color: #fdcb46ff;
     text-align: center;
+    height: 60px;
     a { color: #fdcb46ff;
+        
+
+        
+    }
+} 
+
+
+header {
+    background: #579c87ff;
+    color: #fdcb46ff;
+    text-align: center;
+    height: 60px;
+    a { color: #fdcb46ff;
+        padding-top: 10px
+
         
     }
 } 
