--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,23 +2,15 @@ header {
     background: #579c87ff;
     color: #fdcb46ff;
     text-align: center;
-    height: 60px;
+    height: 100px;
+    font-size: 27px;
     a { color: #fdcb46ff;
-        
-
-        
+           
     }
 } 
 
 
 header {
-    background: #579c87ff;
-    color: #fdcb46ff;
-    text-align: center;
-    height: 60px;
-    a { color: #fdcb46ff;
-        padding-top: 10px
-
-        
+    h1 { padding-top: 10px;
     }
 } 
