--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,5 +5,6 @@
 @import "./base/typography";
 
 @import "./layout/header";
-@import "./layout/nav";
 @import "./layout/container";
+
+@import "./pages/acceuil"
