--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ header {
 }
 header a {
   color: #fdcb46ff;
+  text-decoration: none;
+  font-family: "Roboto-Regular";
+  src: url("font/Roboto-Regular.ttf") format("truetype");
 }
 
 header h1 {
@@ -19,15 +22,111 @@ footer {
   height: 40px;
   text-align: center;
   align-items: center;
+  margin-top: 2vmin;
 }
 footer a {
   color: #fdcb46ff;
+  text-decoration: none;
+  font-family: "Roboto-Regular";
+  src: url("font/Roboto-Regular.ttf") format("truetype");
+  font-size: 1.5em;
 }
 
 main .menublock {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 10px;
+  grid-template-columns: repeat(2, 33vw);
+  grid-gap: 10vw;
+  margin: 12vw;
+  grid-auto-rows: 65vh;
+}
+
+main .one, main .two, main .three, main .four {
+  text-align: center;
+  box-shadow: 0px 0px 8px 1px #a2a5a4;
+}
+main h2 {
+  font-family: "Tillana-Regular";
+  src: url("font/Tillana-Regular.ttf") format("truetype");
+  font-size: 2.6em;
+}
+main .one {
+  background-color: #fcdfdb;
+}
+main .one h2, main .one h3 {
+  color: #3d1319;
+}
+main .one h3 {
+  margin-top: 20vmin;
+  font-size: 2.7em;
+  font-family: "Devonshire-Regular";
+  src: url("font/Devonshire-Regular.ttf") format("truetype");
+  padding: 0vmin 3vmin 0vmin 3vmin;
+}
+main .two {
+  background-color: #fff5fe;
+}
+main .two h3, main .two h2 {
+  background: linear-gradient(to right, #c77529 0%, #6e4ccc 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+main .two h3 {
+  margin-top: 20vmin;
+  font-size: 1.9em;
+  font-family: "CroissantOne-Regular";
+  src: url("font/CroissantOne-Regular.ttf") format("truetype");
+  padding: 0vmin 3vmin 0vmin 3vmin;
+}
+main .three {
+  background-color: #f9f9f9;
+}
+main .three h3, main .three h2 {
+  background: linear-gradient(to right, #3a4fa2 0%, #4e96d1 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+main .three h3 {
+  margin-top: 20vmin;
+  font-size: 2.7em;
+  font-family: "Parisienne-Regular";
+  src: url("font/Parisienne-Regular.ttf") format("truetype");
+  padding: 0vmin 3vmin 0vmin 3vmin;
+}
+main .four {
+  background-color: #fefffe;
+}
+main .four h3, main .four h2 {
+  background: linear-gradient(to right, #57a746 0%, #c2db76 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-decoration: none;
+}
+main .four h3 {
+  margin-top: 20vmin;
+  font-size: 2.5em;
+  font-family: "KaushanScript-Regular";
+  src: url("font/KaushanScript-Regular.ttf") format("truetype");
+}
+main a {
+  text-decoration: none;
+}
+
+main aside {
+  color: #fdcb46ff;
+  text-align: center;
+  background-color: #579c87ff;
+  width: 50%;
+  height: 2.8em;
+  margin: 0vmin auto 10vmin auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+}
+main aside h2 {
+  font-family: "Roboto-Regular";
+  src: url("font/Roboto-Regular.ttf") format("truetype");
+  font-size: 1.5em;
 }
 
 /*# sourceMappingURL=style.css.map */
