--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./base/typography";
 
 @import "./layout/header";
-@import "./layout/container";
+@import "./layout/footer";
+@import "./layout/main";
 
-@import "./pages/acceuil"
+@import "./pages/acceuil";
